--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -90,157 +90,125 @@ body {
   height: 9px;
 }
 
-.content {
-  width: 25vw;
-  background: #dde1e7;
-  border-radius: 10px;
-  padding: 40px 30px;
-  box-shadow: -3px -3px 7px #2c2b2b73, 2px 2px 5px rgba(94, 104, 121, 0.288);
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
-.content .text {
-  font-size: 33px;
-  font-weight: 600;
-  margin-bottom: 35px;
-  color: #000;
-}
-
-.field {
-  margin-bottom: 20px;
-}
-
-.content .field {
-  height: 50px;
+body {
+  background-color: #188255;
   width: 100%;
+  min-height: 100vh;
+
   display: flex;
-  position: relative;
+  align-items: center;
+  justify-content: center;
 }
 
-.field input {
-  margin-bottom: 20px;
-  height: 100%;
-  width: 100%;
-  padding-left: 45px;
-  font-size: 18px;
-  outline: none;
-  border: none;
-  color: #595959;
-  background: #dde1e7;
-  border-radius: 25px;
-  box-shadow: inset 2px 2px 5px #4a5168, inset -5px -5px 10px #ffffff73;
-}
-
-.field span {
-  position: absolute;
-  width: 50px;
-  line-height: 50px;
-  color: #595959;
-}
-
-.forgot-pass {
-  text-align: left;
-  margin: 10px 0 10px 5px;
-}
-
-.forgot-pass a {
-  font-size: 16px;
-  color: #3498db;
-  text-decoration: none;
-}
-
-.forgot-pass:hover a {
-  text-decoration: underline;
-}
-
-button {
-  margin: 15px 0;
-  width: 100%;
-  height: 50px;
-  color: #000;
-  font-size: 18px;
-  font-weight: 600;
-  background: #dde1e7;
+button,
+input {
   border: none;
   outline: none;
-  cursor: pointer;
-  border-radius: 25px;
-  box-shadow: 2px 2px 5px #596799, -5px -5px 10px #ffffff73;
-}
-
-button:focus {
-  color: #3498db;
-  box-shadow: inset 2px 2px 5px #475175, inset -5px -5px 10px #ffffff73;
 }
 
 .signup {
-  font-size: 16px;
-  color: #595959;
-  margin: 10px 0;
-}
-
-.signup a {
-  color: #000;
-  text-decoration: none;
-}
-
-.signup a:hover {
-  text-decoration: underline;
-}
-
-/* back-button */
-
-.back-button {
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  left: 5%;
-  top: 8%;
-
-  transform: translate(-50%, -50%);
-  border-radius: 50%;
-  border: #03a9f4 1px solid;
-  overflow: hidden;
-  transition: background 0.3s ease;
-}
-.back-button.back .arrow-wrap {
-  left: -50%;
-}
-.back-button:hover {
-  background: #03a9f4;
-}
-.back-button:hover .arrow-wrap span {
-  background: #fff;
-}
-.back-button .arrow-wrap {
-  display: block;
-  position: absolute;
-  height: 70%;
-  width: 70%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: left 0.3s ease;
-}
-.back-button .arrow-wrap span {
-  height: 1px;
-  left: 0;
-  top: 50%;
-  background: #03a9f4;
-  position: absolute;
-  display: block;
-  transition: background 0.3s ease;
-}
-.back-button .arrow-wrap .arrow-part-1 {
+  background-color: white;
   width: 100%;
-  transform: translate(0, -50%);
+  max-width: 500px;
+  padding: 50px 70px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  border-radius: 20px;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
-.back-button .arrow-wrap .arrow-part-2 {
-  width: 60%;
-  transform: rotate(-45deg);
-  transform-origin: 0 0;
+
+h1 {
+  text-align: center;
+  color: #188255;
 }
-.back-button .arrow-wrap .arrow-part-3 {
-  width: 60%;
-  transform: rotate(45deg);
-  transform-origin: 0 0;
+h2 {
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: lighter;
+
+  margin-bottom: 40px;
+}
+
+h2 span {
+  text-decoration: underline;
+  cursor: pointer;
+  color: #188255;
+}
+
+/*  Field */
+.signup__field {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  position: relative;
+  margin-bottom: 50px;
+}
+
+.signup__field:before {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  width: 0px;
+  height: 2px;
+  background: #188255;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: all 0.4s ease;
+}
+
+.signup__field:hover:before {
+  width: 100%;
+}
+
+/*  Input */
+.signup__input {
+  width: 100%;
+  height: 100%;
+  font-size: 1.2rem;
+  padding: 10px 2px 0;
+  border-bottom: 2px solid #e0e0e0;
+}
+
+/*  Label */
+.signup__label {
+  color: #bdbdbd;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 2px;
+  font-size: 1.2rem;
+  transition: all 0.3s ease;
+}
+
+.signup__input:focus + .signup__label,
+.signup__input:valid + .signup__label {
+  top: 0;
+  font-size: 1rem;
+  background-color: white;
+}
+
+input[type='submit'] {
+  background: #188255;
+  color: white;
+  padding: 12px 0;
+  font-size: 1.2rem;
+  border-radius: 25px;
+  cursor: pointer;
+}
+
+input[type='submit']:hover {
+  background: #0bd883;
 }
