--- a/views/portal/login.ejs
+++ b/views/portal/login.ejs
@@ -27,35 +27,27 @@
           </div>
         </div>
           </div>
-    <div class="content">
-      <div class="text">Login Here</div>
-      <form action="/auth/login" method="POST">
-        <div class="field">
-          <span class="fas fa-user"></span>
-          <input type="text" name="email" required placeholder="Email" />
-        </div>
-        <div class="field">
-          <span class="fas fa-lock"></span>
-          <input type="password" name="password" placeholder="Password" />
-        </div>
-        <div class="forgot-pass"><a href="#">Forgot Password?</a></div>
-        <button type="submit">
-          Sign in
-        </button>
-        <div class="signup">
-          Not registered yet?
-          <a href="/signup">signup now</a>
-        </div>
-      </form>
-    </div>
+          <form method="POST" action="/auth/login" class="signup">
+            <h1>Login</h1>
+            <br/>
+                    
+            <div class="signup__field">
+              <input class="signup__input" type="text" name="email" id="email" required />
+              <label class="signup__label" for="email">Email</label>
+            </div>
+          
+            <div class="signup__field">
+              <input class="signup__input" type="password" name="password" id="password" required />
+              <label class="signup__label" for="password">Password</label>
+            </div>
+          
+            <input type="submit" value="Login">
 
-    <a href="/" class="back-button">
-      <div class="arrow-wrap">
-        <span class="arrow-part-1"></span>
-        <span class="arrow-part-2"></span>
-        <span class="arrow-part-3"></span>
-      </div>
-    </a>
+            <br/>
+            <h2>Not yet registered? <span> <a style="color: #188255; text-decoration: none;" href="/signup">Sign up</a> </span></h2>
+
+          </form>
+
   </body>
   <script
   src="https://code.jquery.com/jquery-3.5.1.min.js"
