add update contact page

--- a/views/portal/dashboard.ejs
+++ b/views/portal/dashboard.ejs
@@ -15,7 +15,7 @@
     <main class="main">
         <div class="main__div1">
             <a class="main-left-option first-opt" href="">Hospitals</a>
-            <a class="main-left-option" href="">Edit Contact Info</a>
+            <a class="main-left-option" href="/hospital/update/contact">Edit Contact Info</a>
             <a class="main-left-option" href="">Edit Bio</a>
             <a class="main-left-option" href="">Edit Vaccine List</a>
             <a class="main-left-option" href="">Edit Doctor's List</a>
