--- a/views/portal/addDoctor.ejs
+++ b/views/portal/addDoctor.ejs
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/jpg" href="/img/favicon.png"/>
-    <link rel="stylesheet" href="/css/login.css" />
+    <link rel="stylesheet" href="/css/addDoctor.css" />
 
-    <title>Nirog | Update Contact</title>
+    <title>Nirog | Add Doctor</title>
   </head>
   <body>
     <div class="loader-wrapper">
@@ -27,31 +27,36 @@
           </div>
         </div>
           </div>
-          <form method="POST" action="/api/hospital/update/info/<%= hospital._id %>" class="signup">
-            <h1>Update Contact Info</h1>
+          <form method="POST" action="/api/hospital/add/doctor/<%= hospital._id %>" class="signup">
+            <h1>Add New Doctor</h1>
             <br/>
                     
             <div class="signup__field">
-              <input class="signup__input" type="text" name="name" id="email" value="<%= hospital.name %>" required />
-              <label class="signup__label" for="email">Name</label>
+              <input class="signup__input" type="text" name="name" id="email"  required />
+              <label class="signup__label" for="name">Name</label>
             </div>
 
             <div class="signup__field">
-              <input class="signup__input" type="email" name="email" id="email" value="<%= hospital.email %>" required />
+              <input class="signup__input" type="email" name="email" id="email" required />
               <label class="signup__label" for="email">Email</label>
             </div>
 
             <div class="signup__field">
-              <input class="signup__input" type="text" name="address" id="address" value="<%= hospital.address %>" required />
+                <input class="signup__input" type="text" name="specialization" id="specialization" required />
+                <label class="signup__label" for="email">Specialization</label>
+              </div>
+
+            <div class="signup__field">
+              <input class="signup__input" type="text" name="address" id="address" required />
               <label class="signup__label" for="email">Address</label>
             </div>
           
             <div class="signup__field">
-              <input class="signup__input" type="phone" name="phone" id="phone" value="<%= hospital.phone %>" required />
-              <label class="signup__label" for="password">Phone</label>
+              <input class="signup__input" type="phone" name="phone" id="phone" required />
+              <label class="signup__label" for="phone">Phone</label>
             </div>
           
-            <input type="submit" value="Update">
+            <input type="submit" value="Add Doctor">
 
             <br/>
 
