add new doctor from portal

--- a/views/portal/dashboard.ejs
+++ b/views/portal/dashboard.ejs
@@ -14,7 +14,7 @@
     </nav>
     <main class="main">
         <div class="main__div1">
-            <a class="main-left-option first-opt" href="">Hospitals</a>
+            <a class="main-left-option first-opt" href="#">Hospitals</a>
             <a class="main-left-option" href="/hospital/update/contact/<%= hospital._id %>">Edit Contact Info</a>
             <a class="main-left-option" href="/hospital/update/bio/<%= hospital._id %>">Edit Bio</a>
             <a class="main-left-option" href="/hospital/add/doctor/<%= hospital._id %>">Add Doctor</a>
