--- a/views/portal/signup.ejs
+++ b/views/portal/signup.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/jpg" href="/img/favicon.png"/>
+    <link rel="shortcut icon" type="image/jpg" href="/assets/app_icon.svg"/>
     <link rel="stylesheet" href="/css/signup.css" />
     <title>Nirog | Signup</title>
   </head>
@@ -59,7 +59,7 @@
             <input type="submit" value="Signup">
 
             <br/>
-            <h2>Already registered? <span> <a style="color: #188255; text-decoration: none;" href="/login">Login</a> </span></h2>
+            <h2>Already registered? <span> <a style="color: #7686f9; text-decoration: none;" href="/login">Login</a> </span></h2>
 
           </form>
   </body>
