--- a/views/portal/homepage.ejs
+++ b/views/portal/homepage.ejs
@@ -4,114 +4,110 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/jpg" href="/img/favicon.png"/>
+    <link rel="shortcut icon" type="image/jpg" href="/assets/app_icon.svg"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="/css/homepage.css">
-    <title>Nirog</title>
+    <title>Nirog | Home</title>
 </head>
 <body>
-
-    <div class="loader-wrapper">
-   
-        <div class="loader-container">
-            <div class="loader">
-              <img src="https://i.imgur.com/BbQQdiRr.png" alt="Lifeline">
-              <div class="slide-box">
-                <div class="solid"></div>
-              </div>
+    <div class="wrapper">
+        <div class="first-one">
+            <div class="navbar">
+                <div class="navbar__logo">
+                    <img class="logo" src="./public/assets/app_icon.svg" alt="">
+                    <a href="./index.html" class="navbar__logo-name">Nirog</a>
+                </div>
+                <nav class="menu menu-3">
+                        <ul>
+                          <li><a href="#our-motive">Our Motive</a></li>
+                          <li><a href="#our-solution">Our Solution</a></li>
+                          <li><a href="#app-section">App</a></li>
+                          <li><a href="#web-section">Web</a></li>
+                          <li><a class="button" href="/signup">Sign Up</a></li>
+                          <li><a class="button" href="/login">Login</a></li>
+                        </ul>
+                </nav>
             </div>
-            <div class="heading">
-              <h1>Loading</h1>
-              <div class="dot" id="d1"></div>
-              <div class="dot" id="d2"></div>
-              <div class="dot" id="d3"></div>
-          
+            <div class="header">
+                <div class="header__one" data-aos="zoom-in" >
+                    <img class="big-heart-svg" src="./public/assets/big_heart.svg" alt="">
+                    <img class="text-svg" src="./public/assets/image 4.svg" alt="">
+                </div>
+                <div class="header__two">
+                    <img id="our-motive" class="ellipse-1" src="./public/assets/Ellipse 1.svg" alt="">
+                    <img  class="ellipse-2" src="/assets/Ellipse 2.svg" alt="">
+                    <img class="hospital-svg" src="/assets/hospital_image.svg" alt="">
+                    <img class="path-svg" src="/assets/path.svg" alt="">
+                    <img class="user-svg" src="/assets/user_image.svg" alt="">
+                    <img class="cloud-svg" src="/assets/cloud_image.svg" alt="">
+                </div>
             </div>
-          </div>
+            <div  class="motive" data-aos="fade-up">
+                <h1 align="center" >Our Motive</h1>
+                <p class="motive-desc">
+                    As we started exploring the various problems still prevailing in our
+                 society we noticed we still the problem of child vaccination and
+             the whole system of it needs a major revamp to cope up in
+             today's modern and fast-growing world.
+                </p>
             </div>
-    
-    <div class="content">
-        <div class="section1">
-            <img src="/img/logo.png" class="logo" alt="logo">
-            <h1>A portal for hospitals</h1>
-            <div class="text-box"><p>Let peeople know your hospital better</p></div>
-            <div class="os-buttons">
-                <button onclick="location.href = '/signup';" class="button-ios">Hospital Signup</button>
-                <button onclick="location.href = '/login';" class="button-mac">Hospital Login</button>
+            <h1 data-aos="fade-right" class="covid-imlications">COVID 19 <br/> IMPLICATIONS </h1>
+            <div class="covid" data-aos="fade-up">
+                <img class="covid-img" src="/assets/image 5.svg" alt="">
+            </div>
+            <div id="our-solution" class="solution" data-aos="fade-up">
+                <h1 align="center">Our Solution</h1>
+                <img class="solution-img" src="/assets/image 6.svg" alt="">
+                <p class="motive-desc" >
+                    We want to bridge the gap between hospitals and the users through the means of technology. For this, we have developed a portal for the hospitals to log in and provide the details of the hospital. Users will download the app from playstore and will be able to avail the features like appointment system and the availability of facilities, it’s medicine supply and also the doctors and vaccines available there. 
+                </p>
+            </div>
+            <h1 data-aos="fade-up" id="app-section" align="center">App - Nirog</h1>
+            <div class="section-app">
+                <div class="section-app-one">
+                    <p data-aos="fade-right"> 
+                        Our app focuses on providing a easy to use and understand UI as our target users are mainly mothers of rural and sub-urban areas. 
+                        Its main features are maintaining a database for users of which vaccines are taken and which are not. Getting all the related data of the hospitals which are registered of in our portal. Also setting appointments and getting the know the available facilities and many more...
+                    </p>
+                    <br/>   
+                    <a data-aos="fade-right" class="download-button" href="#">Download</a>
+                </div>
+                <div class="section-app-two">
+                    <img data-aos="fade-left" class="phone-svg" src="./assets/phone.svg" alt="">
+                </div>
+            </div>
+            <h1 data-aos="fade-up" id="web-section" align="center">Web</h1>
+            <div data-aos="fade-up" class="web-section">
+                <p>
+                    Our website focuses on logging in hospital admins so that they can provide details of their hospitals and its facilities to the app which the users are active on. Also, appointments will be scheduled corresponding to particular doctors and other facilities will be notified and added in the hospitals section. 
+                </p>
+                <img class="team-svg" src="/assets/team.svg" alt="">
+            </div>
+            <div class="team-message">
+                    <h1 data-aos="fade-right">
+                        So let us join hands for a  better future
+                    </h1>
+                   <h3 data-aos="fade-left" class="author">—Team Nirog</h3>
+                   <h3 data-aos="fade-left" class="author">—Team Nirog</h3>
+            </div>
+            <div class="github">
+                <a href="https://github.com/JyotimoyKashyap/SolutionChallenge2021">
+                    <img  class="github-svg" src="/assets/github 1.svg" alt="">
+                </a>
+                <h3>Nirog on Github</h3>
             </div>
         </div>
     </div>
-        <div class="section2">
-            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
-            <div class="text-box"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae a perspiciatis id placeat nemo blanditiis officiis odio tempore alias nihil?</p></div>
-        </div>
-        <div class="section4">
-            <h2>Hospitals which already registered</h2>
-        <br/>
-            <ul class="companies">
-                <li class="hospitals-logo"><img src="/img/logo.jpg" height="100px" class="google" alt="Google logo"></img> <br/>Sample Hospital </li>
-                <li class="hospitals-logo"><img src="/img/logo.jpg" height="100px" class="google" alt="Google logo"></img> <br/>Sample Hospital </li>
-                <li class="hospitals-logo"><img src="/img/logo.jpg" height="100px" class="google" alt="Google logo"></img> <br/>Sample Hospital </li>
-                <li class="hospitals-logo"><img src="/img/logo.jpg" height="100px" class="google" alt="Google logo"></img> <br/> Sample Hospital</li>
-                <li class="hospitals-logo"><img src="/img/logo.jpg" height="100px" class="google" alt="Google logo"></img> <br/> Sample Hospital</li>
-            </ul>
-            <br/>
-        </div>
-        <div class="section5">
-            <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit</h2>
-            <div class="text-box"><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, nam.</p></div>
-            <div class="os-buttons">
-                <button onclick="location.href = '/signup';" class="button-ios">Register Your Hospital</button>
-            </div>
-        </div>
-        <div class="footer-divider"></div>
-    <footer>
-        <ul class="info">
-            <li>FAQs</li>
-            <li>Privacy Policy</li>
-            <li>Contact Us</li>
-        </ul>
-    </footer>
 
-
-
+    <div class="footer">
+        <p>Made with &#10084;&#65039; by Team Nirog</p>
+    </div>
 </body>
-<script
-  src="https://code.jquery.com/jquery-3.5.1.min.js"
-  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-  crossorigin="anonymous"></script>
-  <script>
-      $(window).on("load", function(){
-          $(".loader-wrapper").fadeOut("slow")
-      })
+
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+    AOS.init({ offset: 400, delay: 0, duration: 1e3 });
   </script>
-  <script>
-    let slideBox = document.querySelector('.slide-box');
-let solid = document.querySelector('.solid');
-
-let width = 100;
-
-let slide = setInterval(() => {
-    solid.style.width = `${width}%`;
-    width -= 1;
-}, 20)
-
-setTimeout(() => {
-    clearInterval(slide);
-    solid.style.width = `100%`;
-}, 2050);
-
-setInterval(() => {
-
-    width = 100;
-    let slide = setInterval(() => {
-        solid.style.width = `${width}%`;
-        width -= 1;
-    }, 20)
-
-    setTimeout(() => {
-        clearInterval(slide);
-    }, 2050);
-
-}, 2050);
-</script>
 </html>
