--- a/views/portal/login.ejs
+++ b/views/portal/login.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/jpg" href="/img/favicon.png"/>
+    <link rel="shortcut icon" type="image/jpg" href="/assets/app_icon.svg"/>
     <link rel="stylesheet" href="/css/login.css" />
 
     <title>Nirog | Login</title>
@@ -44,7 +44,7 @@
             <input type="submit" value="Login">
 
             <br/>
-            <h2>Not yet registered? <span> <a style="color: #188255; text-decoration: none;" href="/signup">Sign up</a> </span></h2>
+            <h2>Not yet registered? <span> <a style="color: #7686f9; text-decoration: none;" href="/signup">Sign up</a> </span></h2>
 
           </form>
 
