--- a/views/portal/dashboard.ejs
+++ b/views/portal/dashboard.ejs
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/jpg" href="/assets/app_icon.svg"/>
     <link rel="stylesheet" href="/css/dashboard.css">
-    <link rel="stylesheet" href="/css/homepage.css">
     <title>Nirog | Dashboard</title>
 </head>
 <body>
     <div class="navbar">
         <div class="navbar__logo">
-            <img class="logo" src="./public/assets/app_icon.svg" alt="">
-            <a href="./index.html" class="navbar__logo-name">Nirog</a>
+            <img class="logo" src="/assets/app_icon.svg" alt="">
+            <a href="/" class="navbar__logo-name">Nirog</a>
         </div>
         <nav class="menu menu-3">
                 <ul>
@@ -27,7 +26,7 @@
     </div>
     <main class="main">
         <div class="main__div1">
-            <a class="main-left-option first-opt" href="#">Hospitals</a>
+            <a class="main-left-option first-opt" style="color: white !important;" href="#">Hospitals</a>
             <a class="main-left-option" href="/hospital/update/contact/<%= hospital._id %>">Edit Contact Info</a>
             <a class="main-left-option" href="/hospital/update/bio/<%= hospital._id %>">Edit Bio</a>
             <a class="main-left-option" href="/hospital/add/doctor/<%= hospital._id %>">Add Doctor</a>
