--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -44,7 +44,7 @@ body {
 .first-opt {
   background-color: #7686f9;
   padding: 20px 10px;
-  color: black;
+  color: white;
 }
 
 .main-left-option {
@@ -56,7 +56,7 @@ body {
 
 .main-left-option:hover {
   background-color: #7686f9;
-  color: black;
+  color: white;
 }
 
 .main__div2 {
@@ -78,7 +78,7 @@ body {
 }
 
 .hospital_large {
-  background-color: #7686f9;
+  background-color: #dff0f0;
   max-width: 1000px;
   border-radius: 20px;
   padding: 40px;
@@ -86,7 +86,7 @@ body {
 }
 
 .doctors {
-  background-color: #7686f9;
+  background-color: #dff0f0;
   max-width: 1000px;
   border-radius: 20px;
   padding: 40px;
@@ -107,7 +107,7 @@ body {
 .doctors-card {
   width: 180px;
   height: 200px;
-  background-color: #7686f9;
+  background-color: #dff0f0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -138,4 +138,89 @@ body {
 .border-bottom {
   padding-top: 15px;
   border-bottom: 0.5px solid grey;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 20px;
+  /* margin: 20px 0px; */
+}
+
+.navbar__logo {
+  display: flex;
+}
+
+.navbar__logo-name {
+  text-decoration: none;
+  font-size: 26px;
+  font-weight: 600;
+  color: #767a8d;
+  margin: auto;
+  flex-basis: 0;
+}
+
+.logo {
+  width: 40px;
+  margin-right: 20px;
+}
+
+.navbar-options {
+  display: flex;
+  flex-direction: column;
+}
+
+.menu ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+.menu li {
+  display: inline-block;
+  margin: 0 15px;
+}
+.menu a {
+  font-size: 17px;
+  font-weight: 500;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #000;
+  display: block;
+  position: relative;
+  padding: 4px 0;
+}
+.menu a::before {
+  content: '';
+  width: 100%;
+  height: 3px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background: #fff;
+  transition: 0.4s transform ease;
+  transform: scale3d(0, 1, 1);
+  transform-origin: 0 50%;
+}
+.menu a:hover::before {
+  transform: scale3d(1, 1, 1);
+}
+.menu-3 a::before {
+  transform-origin: 50% 50%;
+  background: #7686f9;
+}
+
+.button {
+  background-color: #7686f9;
+  border-radius: 10px;
+  color: #ffffff !important;
+  font-weight: 800 !important;
+  padding: 7px 12px !important;
+}
+
+.button:hover {
+  transform-origin: 50% 50%;
+  background: #fff;
+  color: black !important;
+  transition: all 0.5s !important;
 }
