--- a/views/portal/homepage.ejs
+++ b/views/portal/homepage.ejs
@@ -12,7 +12,7 @@
     <title>Nirog | Home</title>
 </head>
 <body>
-    <div class="wrapper">
+    <div id="top" class="wrapper">
         <div class="first-one">
             <div class="navbar">
                 <div class="navbar__logo">
@@ -100,7 +100,11 @@
             </div>
         </div>
     </div>
-
+    <div class="back-top-top">
+        <a href="#top">
+            <img class="icon-btt" src="/assets/upload.svg" alt="">
+        </a>
+    </div>
     <div class="footer">
         <p>Made with &#10084;&#65039; by Team Nirog</p>
     </div>
