--- a/views/portal/homepage.ejs
+++ b/views/portal/homepage.ejs
@@ -74,8 +74,9 @@
                     <br/>   
                     <a data-aos="fade-right" class="download-button" href="#">Download</a>
                 </div>
-                <div class="section-app-two">
-                    <img data-aos="fade-left" class="phone-svg" src="./assets/phone.svg" alt="">
+                <div data-aos="fade-left" class="section-app-two">
+                    <img  class="phone-svg" src="./assets/phone.svg" alt="">
+                    <img class="mb-ss" src="/assets/mb-ss.jpg" alt="">
                 </div>
             </div>
             <h1 data-aos="fade-up" id="web-section" align="center">Web</h1>
@@ -89,7 +90,6 @@
                     <h1 data-aos="fade-right">
                         So let us join hands for a  better future
                     </h1>
-                   <h3 data-aos="fade-left" class="author">—Team Nirog</h3>
                    <h3 data-aos="fade-left" class="author">—Team Nirog</h3>
             </div>
             <div class="github">
