--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -231,6 +231,16 @@ body {
 .phone-svg {
   height: 450px;
   margin-left: 100px;
+  z-index: 0;
+}
+
+.mb-ss {
+  height: 440px;
+  margin-top: 5px;
+  position: absolute;
+  margin-left: -218px;
+  border-radius: 20px;
+  z-index: 1;
 }
 
 .download-button {
