--- a/views/portal/homepage.ejs
+++ b/views/portal/homepage.ejs
@@ -36,8 +36,8 @@
                     <img class="text-svg" src="./public/assets/image 4.svg" alt="">
                 </div>
                 <div class="header__two">
-                    <img id="our-motive" class="ellipse-1" src="./public/assets/Ellipse 1.svg" alt="">
-                    <img  class="ellipse-2" src="/assets/Ellipse 2.svg" alt="">
+                    <!-- <img id="our-motive" class="ellipse-1" src="./public/assets/Ellipse 1.svg" alt="">
+                    <img  class="ellipse-2" src="/assets/Ellipse 2.svg" alt=""> -->
                     <img class="hospital-svg" src="/assets/hospital_image.svg" alt="">
                     <img class="path-svg" src="/assets/path.svg" alt="">
                     <img class="user-svg" src="/assets/user_image.svg" alt="">
