--- a/views/portal/homepage.ejs
+++ b/views/portal/homepage.ejs
@@ -17,7 +17,7 @@
             <div class="navbar">
                 <div class="navbar__logo">
                     <img class="logo" src="./public/assets/app_icon.svg" alt="">
-                    <a href="./index.html" class="navbar__logo-name">Nirog</a>
+                    <a href="/" class="navbar__logo-name">Nirog</a>
                 </div>
                 <nav class="menu menu-3">
                         <ul>
@@ -36,12 +36,11 @@
                     <img class="text-svg" src="./public/assets/image 4.svg" alt="">
                 </div>
                 <div class="header__two">
-                    <!-- <img id="our-motive" class="ellipse-1" src="./public/assets/Ellipse 1.svg" alt="">
-                    <img  class="ellipse-2" src="/assets/Ellipse 2.svg" alt=""> -->
                     <img class="hospital-svg" src="/assets/hospital_image.svg" alt="">
                     <img class="path-svg" src="/assets/path.svg" alt="">
                     <img class="user-svg" src="/assets/user_image.svg" alt="">
                     <img class="cloud-svg" src="/assets/cloud_image.svg" alt="">
+                    <div id="our-motive"></div>
                 </div>
             </div>
             <div  class="motive" data-aos="fade-up">
