--- a/views/portal/dashboard.ejs
+++ b/views/portal/dashboard.ejs
@@ -16,11 +16,7 @@
         </div>
         <nav class="menu menu-3">
                 <ul>
-                  <!-- <li><a href="#our-motive">Our Motive</a></li>
-                  <li><a href="#our-solution">Our Solution</a></li>
-                  <li><a href="#app-section">App</a></li>
-                  <li><a href="#web-section">Web</a></li> -->
-                  <li><a class="button" href="/auth/signout">Sign out</a></li>
+                  <li><a class="button" href="/signout">Sign out</a></li>
                 </ul>
         </nav>
     </div>
